# sponsor-allocator

./: Cargo.toml  README.md
examples/: demo.rs
migrations/: 20260623000000_create_sponsor_allocator_tables.sql
src/: error.rs  events.rs  lib.rs  pool.rs  repository.rs  service.rs  strategy.rs
tests/: db_tests.rs  integration_tests.rs
