[package]
name = "sponsor_allocator"
version = "0.1.0"
edition = "2021"
description = "Sponsor allocation engine with Round-Robin and Performance-Based strategies for the Royal Flush Network."
license = "MIT"

[features]
db = ["dep:sqlx", "dep:tokio", "dep:async-trait"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
uuid = { version = "1.0", features = ["v7", "serde", "js"] }

# Optional dependencies for DB integration
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
serde_json = "1.0"

